--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="start-here">
     <nav>
         <input type="checkbox" id="click">
         <label for="click">
@@ -21,14 +21,16 @@
         <ul>
             <li class="active"><a href="#">START HERE</a></li>
             <li><a href="#">RESULTS</a></li>
-            <li><img src="/Assets/Laura_Chouette_LOGO.png" alt="LOGO" height="50" width="50"></li>         
+            <li class="logo"><img src="/Assets/Laura-Chouette-logo.png" alt="LOGO" height="50" width="50"></li>         
             <li><a href="#">BLOG</a></li>
             <li><a href="#">WORK WITH ME</a></li>
         </ul>
     </nav>
-    <main>
-        <img src="https://images.unsplash.com/photo-1582896911227-c966f6e7fb93?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="picture">
-    </main>
+    <!-- <main>
+        <img src="/Assets/laura-chouette-picture.png" alt="picture">
+        <h1>Start your journey to convert your audience to clients</h1>
+        <p></p>
+    </main> -->
 </div>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
