adding z index to the nav bar

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <li><a href="#">WORK WITH ME</a></li>
         </ul>
     </nav>
-    <!-- <main>
+    <main>
         <img src="/Assets/laura-chouette-picture.png" alt="picture">
         <h1>Start your journey to convert your audience to clients</h1>
         <p></p>
-    </main> -->
+    </main>
 </div>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
