made changes to the main and hero images to align horizontally

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Laura Chouette</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,9 +28,12 @@
         </ul>
     </nav>
     <main>
-        <img src="/Assets/laura-chouette-picture.png" alt="picture">
-        <h1>Start your journey to convert your audience to clients</h1>
-        <p></p>
+        <div class="hero-picture"></div>
+        
+        <div class="main-heading">
+        <h1>Let's convert your side hustle into a business</h1>
+        <p>I help hustlers like you turn their side-hustle into a full fledged business within 6 months.</p>
+    </div>
     </main>
 </div>
 </body>
