adding download guide button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div class="main-heading">
         <h1>Let's convert your side hustle into a business</h1>
         <p>I help hustlers like you turn their side-hustle into a full fledged business within 6 months.</p>
+        <a href="Assets/Free_Guide_for_side_Hustle.xlsx" download="" class="download-guide"><button>
+          Download Side-hustle guide  
+        </button></a>
     </div>
     </main>
 </div>
