--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <div class="main-heading">
         <h1>Let's convert your side hustle into a business</h1>
-        <p>Hi, I am Laura-Chouette. I help hustlers like you turn their side-hustle into a full fledged business within 6 months.</p>
+        <p>Hi, I am <span>Laura Chouette</span>. I help hustlers like you turn their side-hustle into a full fledged business within 6 months.</p>
         <a href="Assets/Free_Guide_for_side_Hustle.xlsx" download="" class="download-guide"><button>
           Download Side-hustle guide  
         </button></a>
