adding the banner

--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
         <h1>Let's convert your side hustle into a business</h1>
         <p>Hi, I am <span>Laura Chouette</span>. I help hustlers like you turn their side-hustle into a full fledged business within 6 months.</p>
         <a href="Assets/Free_Guide_for_side_Hustle.xlsx" download="" class="download-guide"><button>
-          Download Side-hustle guide  
+          Download my Side-hustle guide  
         </button></a>
     </div>
     </main>
 </div>
+<div class="banner"><p>
+    Move from weekend project to an impactful product and scale your impact, income and freedom
+</p></div>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+<script src="script.js"></script>
 </html>
