changing the mobile view side by side to flex reverse

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li class="active"><a href="#">START HERE</a></li>
             <li><a href="#">RESULTS</a></li>
-            <li class="logo"><img src="/Assets/Laura-Chouette-logo.png" alt="LOGO" height="50" width="50"></li>         
+            <li class="logo"><img src="/Assets/Laura-Chouette-logo.png" alt="LOGO" ></li>         
             <li><a href="#">BLOG</a></li>
             <li><a href="#">WORK WITH ME</a></li>
         </ul>
