--- a/index.html
+++ b/index.html
@@ -39,9 +39,22 @@
     </div>
     </main>
 </div>
-<div class="banner"><p>
+<article class="banner"><p>
     Move from weekend project to an impactful product and scale your impact, income and freedom
-</p></div>
+</p></article>
+
+<section class="cta">
+    <p>Here's what you get:</p>
+    <ul>
+        <li>Guide on how to get your first 100 customers</li>
+        <li>6-month action plan to achieve the target revenue</li>
+        <li>Next 6-month plan to hit the target revenue and scale up</li>
+    </ul>
+    <button>Join my Exclusive circle</button> 
+</section>
+<div class="container">
+
+</div>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 <script src="script.js"></script>
