--- a/index.html
+++ b/index.html
@@ -52,9 +52,14 @@
     </ul>
     <button>Join my Exclusive circle</button> 
 </section>
-<div class="container">
-
-</div>
+<footer>
+    <section class="social-media">
+        <a href="#"><iconify-icon icon="bxl:facebook"></iconify-icon></a>
+        <a href="#"><iconify-icon icon="akar-icons:twitter-fill"></iconify-icon></a>
+        <a href="#"><iconify-icon icon="clarity:email-solid"></iconify-icon></a>
+    </section>
+    <p>© Copyright 2018-2024 Laura Chouette | Privacy Policy | Designed by Kaveri G </p>
+</footer>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 <script src="script.js"></script>
