adding active class through JavaScript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="script.js">
 </head>
 <body>
     <div class="container" id="start-here">
@@ -17,14 +18,14 @@
         <input type="checkbox" id="click">
         <label for="click">
         <iconify-icon icon="ant-design:menu-outlined" class="menu-bars"></iconify-icon>
-    </label>
+        </label>
     
         <ul>
-            <li class="active"><a href="#">START HERE</a></li>
-            <li><a href="#">RESULTS</a></li>
+            <li><a href="index.html" >START HERE</a></li>
+            <li><a href="results.html">RESULTS</a></li>
             <li class="logo"><img src="/Assets/Laura-Chouette-logo.png" alt="LOGO" ></li>         
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#">WORK WITH ME</a></li>
+            <li ><a href="blog.html" >BLOG</a></li>
+            <li><a href="work-with-me.html">WORK WITH ME</a></li>
         </ul>
     </nav>
     <main>
