adding results page

--- a/results.html
+++ b/results.html
@@ -28,7 +28,26 @@
             <li><a href="work-with-me.html">WORK WITH ME</a></li>
         </ul>
     </nav>
-    
+    <h1>See how my clients succeeded</h1>
+    <section class="cont-results">
+        
+        <section class="result">
+            <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Michelle">
+            <h4>Michelle, solopreneur and social media manager</h4>
+            <p>I converted by social media management - a side project into a money making machine all within an year. Thanks to Laura I am now quitting my full time job to take up social media manager as my full time business</p>
+        </section>
+        <section class="result">
+            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Maria">
+            <h4>Maria, content marketer at figs</h4>
+            <p>I was struggling to get clients for my content writing. Laura helped me not only find to clients,but to scale my freelancing career. A year ago if you had told me that I would turn my side gig into a full time business , I wouldnt have beleived you!. All thanks to Laura.</p>
+        </section>
+        <section class="result">
+            <img src="https://images.unsplash.com/photo-1474176857210-7287d38d27c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Joseph">
+            <h4>Joseph, social media manager </h4>
+            <p>I had worked with a few clients when I first saw Laura's content, but was struggling to balance between my day job and my side hustle. Thanks to her I close clients like a dream.</p>
+        </section>
+    </section>
+    <p>You could be one of them! Click on below link and let's start working on your dream</p>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 <script src="script.js"></script>
