adding footer to results page

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="script.js">
 </head>
 <body>
-    <div class="container" id="start-here">
+    <div class="container" id="blog">
     <nav>
         <input type="checkbox" id="click">
         <label for="click">
