--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="script.js">
 </head>
 <body>
-    <div class="container" id="start-here">
+    <div class="container" id="results">
     <nav>
         <input type="checkbox" id="click">
         <label for="click">
@@ -47,7 +47,26 @@
             <p>I had worked with a few clients when I first saw Laura's content, but was struggling to balance between my day job and my side hustle. Thanks to her I close clients like a dream.</p>
         </section>
     </section>
-    <p>You could be one of them! Click on below link and let's start working on your dream</p>
+    <article>
+        <p>You could be one of them! Click on below link and let's start working on your dream</p>
+    </article>
+    <section class="cta">
+        <p>Here's what you get:</p>
+        <ul>
+            <li>Guide on how to get your first 100 customers</li>
+            <li>6-month action plan to achieve the target revenue</li>
+            <li>Next 6-month plan to hit the target revenue and scale up</li>
+        </ul>
+        <button>Join my Exclusive circle</button> 
+    </section>
+    <footer>
+        <section class="social-media">
+            <a href="#"><iconify-icon icon="bxl:facebook"></iconify-icon></a>
+            <a href="#"><iconify-icon icon="akar-icons:twitter-fill"></iconify-icon></a>
+            <a href="#"><iconify-icon icon="clarity:email-solid"></iconify-icon></a>
+        </section>
+        <p>© Copyright 2018-2024 Laura Chouette | Privacy Policy | Designed by Kaveri G </p>
+    </footer>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 <script src="script.js"></script>
