fixed media query in results page

--- a/results.html
+++ b/results.html
@@ -48,7 +48,7 @@
         </section>
     </section>
     <article>
-        <p>You could be one of them! Click on below link and let's start working on your dream</p>
+        <p>You could be one of them! Click on below button and let's start working on your dream</p>
     </article>
     <section class="cta">
         <p>Here's what you get:</p>
@@ -67,6 +67,7 @@
         </section>
         <p>© Copyright 2018-2024 Laura Chouette | Privacy Policy | Designed by Kaveri G </p>
     </footer>
+    </div>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 <script src="script.js"></script>
