worked on the feedback

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="script.js">
+<script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+<script src="script.js"></script>
 </head>
 <body>
     <div class="container" id="start-here">
@@ -21,9 +23,9 @@
         </label>
     
         <ul>
-            <li><a href="index.html" >START HERE</a></li>
+            <li><a href="index.html" id="start-here" >START HERE</a></li>
             <li><a href="results.html">RESULTS</a></li>
-            <li class="logo"><img src="/Assets/Laura-Chouette-logo.png" alt="LOGO" ></li>         
+            <li class="logo"><a href="index.html"><img src="/Assets/Laura-Chouette-logo.webp" alt="LOGO" ></a></li>         
             <li ><a href="blog.html" >BLOG</a></li>
             <li><a href="work-with-me.html">WORK WITH ME</a></li>
         </ul>
@@ -34,18 +36,17 @@
         <div class="main-heading">
         <h1>Let's convert your side hustle into a business</h1>
         <p>Hi, I am <span>Laura Chouette</span>. I help hustlers like you turn their side-hustle into a full fledged business within 6 months.</p>
-        <a href="Assets/Free_Guide_for_side_Hustle.xlsx" download="" class="download-guide"><button>
-          Download my Side-hustle guide  
-        </button></a>
+        <a href="Assets/Free_Guide_for_side_Hustle.xlsx" download="" class="download-guide">
+          Download my Side-hustle guide </a>
     </div>
     </main>
 </div>
-<article class="banner"><p>
+<aside class="banner"><p>
     Move from weekend project to an impactful product and scale your impact, income and freedom
-</p></article>
+</p></aside>
 
 <section class="cta">
-    <p>Here's what you get:</p>
+    <h2>Here's what you get:</h2>
     <ul>
         <li>Guide on how to get your first 100 customers</li>
         <li>6-month action plan to achieve the target revenue</li>
@@ -61,8 +62,7 @@
     </section>
     <p>© Copyright 2018-2024 Laura Chouette | Privacy Policy | Designed by Kaveri G </p>
 </footer>
-<script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
-<script src="script.js"></script>
+
 </body>
 
 </html>
