adding work with me page

--- a/results.html
+++ b/results.html
@@ -53,7 +53,7 @@
         <p>You could be one of them! Click on below button and let's start working on your dream</p>
     </article>
     <section class="cta">
-        <p>Here's what you get:</p>
+        <h2>Here's what you get:</h2>
         <ul>
             <li>Guide on how to get your first 100 customers</li>
             <li>6-month action plan to achieve the target revenue</li>
